--- a/src/test/resources/config/props/driver-config.properties
+++ b/src/test/resources/config/props/driver-config.properties
@@ -1,5 +1,5 @@
 #driver.selenide.browser=phantomjs
-3driver.phantomjs.binary.path=webdriver/phantomjs/bin/phantomjs.exe
+#driver.phantomjs.binary.path=webdriver/phantomjs/bin/phantomjs.exe
 
 driver.selenide.browser=chrome
 driver.webdriver.chrome.driver=webdriver/chromedriver/chromedriver.exe
