--- a/src/test/resources/config/props/test-zipcodes.properties
+++ b/src/test/resources/config/props/test-zipcodes.properties
@@ -1,2 +1,2 @@
-brickseek.search.zips=19355, 19425, 07054, 19616
-brickseek.search.skus=46795987, 953073971
+brickseek.search.zips=19355, 19425
+brickseek.search.skus=54594233, 953073971, 53753312
