--- a/src/test/resources/config/props/driver-config.properties
+++ b/src/test/resources/config/props/driver-config.properties
@@ -4,4 +4,4 @@
 driver.selenide.browser=chrome
 driver.webdriver.chrome.driver=webdriver/chromedriver/chromedriver.exe
 
-driver.selenide.holdBrowserOpen=true
+driver.selenide.holdBrowserOpen=false
